color/allow-blue-to-orange.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-blue-to-orange
  namespace: color
spec:
  podSelector:
    matchLabels:
      run: blue
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          run: orange
    ports:
    - protocol: TCP
      port: 80
