color/deny-all-on-blue.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-on-blue
  namespace: color
spec:
  podSelector:
    matchLabels:
      run: blue 
  policyTypes:
  - Ingress
