color/deny-all-on-orange.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-on-orange
  namespace: color
spec:
  podSelector:
    matchLabels:
      run: orange
  policyTypes:
  - Ingress
