color/deny-all-on-red.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-on-red
  namespace: color
spec:
  podSelector:
    matchLabels:
      run: red
  policyTypes:
  - Ingress
